--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky install"
   },
   "dependencies": {
+    "prettier": "^3.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -22,7 +24,12 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "husky": "^9.0.7",
+    "lint-staged": "^15.2.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
-  }
+  },
+    "lint-staged": {
+      "**/*": "prettier --write --ignore-unknown"
+    }
 }
