--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "prepare": "husky install"
+    "prepare": "husky",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "prettier": "^3.2.4",
@@ -29,7 +30,7 @@
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   },
-    "lint-staged": {
-      "**/*": "prettier --write --ignore-unknown"
-    }
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
+  }
 }
