--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prettier": "^3.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0",
     "sass": "^1.70.0"
   },
   "devDependencies": {
