--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "prepare": "husky chmod && ug+x .husky/*",
+    "prepare": "husky",
     "format": "prettier --write ."
   },
   "dependencies": {
